Added note_add_desc and history_desc to strings.xml to add contentDescription in activity_main layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MoodTracker</string>
-
+    <string name="note_add_desc">Add note button</string>
+    <string name="history_desc">History button</string>
 </resources>
